css/harvest-map.css
#us-map{
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
#hcontainer {
  width: 100%;
  padding: 0px;
  margin-top: -120px;
}

#hmap-container path:hover, circle:hover {
cursor: pointer;
/*
  stroke: #002868 !important;
  stroke-width:2px;
  stroke-linejoin: round;
  fill: #002868 !important;
  float: left;
  display: block;
  position: relative;
  height: 350px;
  width: 550px;
*/
}

#hsmap-container path:hover, circle:hover {
  stroke: #002868 !important;
  stroke-width:2px;
  stroke-linejoin: round;
  fill: #002868 !important;
  cursor: pointer;
  float: left;
  display: block;
  position: relative;
  height: 350px;
  width: 550px;
}
#path67 {
  fill: none !important;
  stroke: #A9A9A9 !important;
  cursor: default;
}
#info-box {
  display: none;
  font-weight: normal;
  font-size: 110%;
  font-style: normal;
  text-align: center;
  position:absolute;
  overflow:hidden;
  background-color: white;
  padding: 5px;
  border-radius:5px;
  border: 1px solid gray;
  color: black;
  line-height: 120%;
}
h1{
  color:black;
  font-size:32px;
  text-align:center;
  display:inline-block;
  position:relative;
  width:100%;
   }
td.indented 
{ 
  /*margin-bottom: -1.62em;
  padding: 0px;   
  text-indent: 20px;*/
  text-indent: 16px;
  font-size: 14pt;
} 

.statesmap{
  float:left;
  width:50%;
  display:inline-block;
}
.table2{
  /*border-collapse: collapse;*/
  width: 40%;
  height: 9%;
  /*table-layout: fixed;*/
  overflow: hidden;
  float: right;
  /*position:inherit;
  margin-left: 0%;
  margin-right:0%;
  margin-top: 0%;*/
  margin-top: 100px;
	
}
.table1{
  font-family: Arial Narrow, Arial, sans-serif;
  border-collapse: collapse;
  width: 25%;
  height: 20%;
  table-layout: fixed;
  overflow: hidden;
  float: right;
  position: absolute;
  /*margin-left: 0%;
  margin-right:0%;
  margin-top: 0%;*/
}

.texas{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.california{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;;margin-top:-10%;}
.louisiana{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;;margin-top:-10%;}
.northdakota{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;;margin-top:-10%;}
.arizona{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;;margin-top:-10%;}
.alabama{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.alaska{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.arkansas{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.colorado{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.connecticut{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.delaware{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.florida{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.georgia{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.hawaii{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.idaho{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.illinois{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.indiana{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.iowa{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.kansas{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.kentucky{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.maine{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.maryland{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.massachusetts{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.michigan{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.minnesota{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.mississippi{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.missouri{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.montana{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.nebraska{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.nevada{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.newhampshire{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.newjersey{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.newmexico{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.newyork{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.northcarolina{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.ohio{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.oklahoma{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.oregon{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.pennsylvania{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.rhodeisland{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.southcarolina{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.southdakota{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.tennessee{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.utah{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.vermont{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.virginia{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.washington{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.westvirginia{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.wisconsin{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}
.wyoming{float: right;display:inline-block; width:50%;height:60%;margin-right:10%;margin-bottom:0%;margin-top:-10%;}

.legend { list-style: none;padding-top: 290px; white-space: nowrap;margin-right: 40% !important;}
.legend li { float: left; height: 12px; width: 12px; }
.legend span {  float: left; width: 12px; height: 12px;  }
.legend .two {  background-color: #99D8C9; }
.legend .three { background-color: #66C2A4; }
.legend .four { background-color: #2CA25F; }
.legend .five { background-color: #006D2C; }

td, th {
  text-align: left;
  border:none; 
  color:#002868; 
  font-size:15pt; 
  font-family: Arial Narrow, Arial, sans-serif;
  padding:0px;
}

tr:nth-child(even) {
  border:none; 
  color:#002868; 
  font-size:15pt; 
  font-family: Arial Narrow, Arial, sans-serif;
}

